Refactor BesoinNutritionnelService for better transactions
Refactor BesoinNutritionnelService to improve transaction management and streamline patient data creation.